<?xml version="1.0" encoding="utf-8"?><!--预览相关view-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/preview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:visibility="visible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnLiveStart"
            android:layout_width="225dip"
            android:layout_height="45dip"
            android:layout_below="@+id/llShareView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dip"
            android:background="@drawable/bg_btn_round_corner_yellow"
            android:text="@string/start_live"
            android:textColor="@color/app_normal_fontcolor0"
            android:textSize="@dimen/app_fontsize_super" />

        <!-- 直播条款-->
        <TextView
            android:id="@+id/tvTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLiveStart"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/live_term_bg"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/live_term"
            android:textColor="@color/white30"
            android:textSize="@dimen/app_fontsize_middle" />

        <LinearLayout
            android:id="@+id/llToolView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_camera"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/open_beauty_face"
                android:layout_marginTop="10dp"
                />
            -->
            <ImageView
                android:id="@+id/ivCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dip"
                android:src="@drawable/live_switch_camera_icon" />

            <!--<ImageView-->
            <!--android:id="@+id/ivBeautyFace"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginRight="12dip"-->
            <!--android:src="@drawable/live_face_beauty_open_icon" />-->

            <ImageView
                android:id="@+id/ivStartPageClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/live_exit_icon" />

        </LinearLayout>
        <!--分享-->
        <LinearLayout
            android:id="@+id/llShareView"
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:layout_below="@+id/rl_topic"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!--<ImageView-->
            <!--android:id="@+id/ivShareHall"-->
            <!--android:layout_width="35dp"-->
            <!--android:layout_height="35dp"-->
            <!--android:layout_marginRight="14dip"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/ic_share_hall_normal" />-->

            <!--<ImageView-->
            <!--android:id="@+id/ivSendAllMsg"-->
            <!--android:layout_width="35dp"-->
            <!--android:layout_height="35dp"-->
            <!--android:layout_marginRight="14dip"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/ic_share_send_msg_normal" />-->

            <CheckBox
                android:id="@+id/ivShareWxChat"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="14dip"
                android:layout_weight="1"
                android:background="@drawable/ic_share_wechat"
                android:button="@null" />

            <CheckBox
                android:id="@+id/ivShareWxFriend"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="14dip"
                android:layout_weight="1"
                android:background="@drawable/ic_share_wechat_friend"
                android:button="@null" />

            <CheckBox
                android:id="@+id/ivShareQq"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="14dip"
                android:layout_weight="1"
                android:background="@drawable/ic_share_qq"
                android:button="@null" />

            <CheckBox
                android:id="@+id/ivShareQzone"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="14dip"
                android:layout_weight="1"
                android:background="@drawable/ic_share_qzone"
                android:button="@null" />

            <CheckBox
                android:id="@+id/ivShareSina"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_share_weibo"
                android:button="@null" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_topic"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/llToolView">

            <EditText
                android:id="@+id/etLiveTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:gravity="center_horizontal"
                android:hint="@string/set_live_title"
                android:imeOptions="actionDone"
                android:maxWidth="225dip"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/app_normal_fontcolor2"
                android:textSize="@dimen/app_fontsize_super" />

        </RelativeLayout>

    </RelativeLayout>

    <!--<include-->
        <!--android:id="@+id/liveTopic"-->
        <!--layout="@layout/include_cr_topic_list"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_weight="1" />-->


</LinearLayout>